--- a/app/views/repos/_repos.html.erb
+++ b/app/views/repos/_repos.html.erb
@@ -1,11 +1,3 @@
-
 <% repos.each do |repo| %>
-	<div><%= repo.name %></div>
-<% end %>
-<div>===========================</div>
-
-<% repos.each do |repo| %>
-	<%= repo.each do |key, value| %>
-	<%= key %> || <%= value %><br /><br />
-	<% end %>
+	<div><a href="<%= repo[:url] %>"><%= repo[:name] %></a></div>
 <% end %>
